src/objects/Accounting_PaymentMethod__c.object
<CustomObject>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <picklist>
            <picklistValues>
                <fullName>CommCareHQ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CommCareHq India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>account</label>
        <referenceTo>Accounting_BillingAccount__c</referenceTo>
        <relationshipLabel>Accounting_PaymentMethod</relationshipLabel>
        <relationshipName>Accounting_PaymentMethod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>billing_admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>billing_admin</label>
        <referenceTo>Accounting_BillingAccountAdmin__c</referenceTo>
        <relationshipLabel>Accounting_PaymentMethod</relationshipLabel>
        <relationshipName>Accounting_PaymentMethod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>customer_id__c</fullName>
        <label>customer_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>method_type__c</fullName>
        <label>method_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_PaymentMethod</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_PaymentMethod</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>